# SecureDeploySol

./: AUDIT.md  Cargo.toml  Dockerfile  Dockerfile.anchor  EVALUATION.md  README.md  docker-compose.yml
.cargo/: audit.toml
.github/workflows/: ci.yml
anchor/: Anchor.toml
anchor/programs/securedeploy-core/: Cargo.toml
anchor/programs/securedeploy-core/src/: error.rs  lib.rs  state.rs
anchor/programs/securedeploy-core/tests/: program_logic.rs
crates/securedeploy-api/: Cargo.toml
crates/securedeploy-api/src/: lib.rs  schema.rs  state.rs
crates/securedeploy-core/: Cargo.toml
crates/securedeploy-core/src/: domain.rs  engine.rs  error.rs  lib.rs  ports.rs
crates/securedeploy-core/tests/: engine_flow.rs
crates/securedeploy-infra/: Cargo.toml
crates/securedeploy-infra/src/: events.rs  lib.rs  memory.rs  postgres.rs
crates/securedeploy-node/: Cargo.toml
crates/securedeploy-node/src/: config.rs  demo.rs  lib.rs  main.rs  startup.rs  telemetry.rs
crates/securedeploy-node/tests/: graphql_flow.rs
crates/securedeploy-resilience/: Cargo.toml
crates/securedeploy-types/: Cargo.toml
crates/securedeploy-types/benches/: build_hash.rs
crates/securedeploy-types/src/: build_hash.rs  error.rs  governance.rs  lib.rs
crates/securedeploy-types/tests/: governance_props.rs
migrations/: 0001_init.sql
monitoring/: prometheus.yml
postman/: SecureDeploySol.postman_collection.json
