[package]
name = "securedeploy-core"
version = "0.1.0"
description = "Hardened on-chain upgrade-governance program: guardian multisig, timelocked proposals, verifiable build-hash pinning, and two-step authority transfer. A reference for defending against the common Solana attack classes."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "securedeploy_core"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30", features = ["init-if-needed"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("custom-heap", "custom-panic", "anchor-debug"))',
] }
